# ddb-python-fastapi-demo

./: .env.sample  .gitignore  Makefile  README.md  ddb.yaml  docker-compose.yml.jsonnet  main.py  pyproject.toml
.docker/python/: Dockerfile.jinja  fixuid.yml
api/middlewares/: api_key.py
api/routers/: hello_world.py
